{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 28,
  "lineage": "ca748a6a-c440-b3f0-3364-36bdb1fd5ef9",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c2a052865d3ebc8",
            "arn": "arn:aws:ec2:eu-west-3:964711978492:elastic-ip/eipalloc-07c2a052865d3ebc8",
            "domain": "vpc",
            "id": "eipalloc-07c2a052865d3ebc8",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-39-132-213.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.132.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "garden-web-app-nat-eu-west-3a"
            },
            "tags_all": {
              "Name": "garden-web-app-nat-eu-west-3a"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005a7959a5c7debd7",
            "arn": "arn:aws:ec2:eu-west-3:964711978492:elastic-ip/eipalloc-005a7959a5c7debd7",
            "domain": "vpc",
            "id": "eipalloc-005a7959a5c7debd7",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-52-47-121-196.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.121.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "garden-web-app-nat-eu-west-3b"
            },
            "tags_all": {
              "Name": "garden-web-app-nat-eu-west-3b"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:internet-gateway/igw-0cc65d386abca4b3f",
            "id": "igw-0cc65d386abca4b3f",
            "owner_id": "964711978492",
            "tags": {
              "Name": "garden-web-app-igw"
            },
            "tags_all": {
              "Name": "garden-web-app-igw"
            },
            "vpc_id": "vpc-0cea0ad9ddd139be1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c2a052865d3ebc8",
            "association_id": "eipassoc-027e90f10aed8d71e",
            "connectivity_type": "public",
            "id": "nat-0201e1ca4e623673e",
            "network_interface_id": "eni-0c90054f01f396aa8",
            "private_ip": "10.0.0.195",
            "public_ip": "13.39.132.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02c49126a7466b425",
            "tags": {
              "Name": "garden-web-app-nat-eu-west-3a"
            },
            "tags_all": {
              "Name": "garden-web-app-nat-eu-west-3a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005a7959a5c7debd7",
            "association_id": "eipassoc-01d45b95a1efb82b3",
            "connectivity_type": "public",
            "id": "nat-0ec1a40431726382e",
            "network_interface_id": "eni-0c983a57ec24e240e",
            "private_ip": "10.0.1.174",
            "public_ip": "52.47.121.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0be3b65e41a797913",
            "tags": {
              "Name": "garden-web-app-nat-eu-west-3b"
            },
            "tags_all": {
              "Name": "garden-web-app-nat-eu-west-3b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:route-table/rtb-04b5f107e4aa798cc",
            "id": "rtb-04b5f107e4aa798cc",
            "owner_id": "964711978492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0201e1ca4e623673e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "garden-web-app-private-rt-eu-west-3a"
            },
            "tags_all": {
              "Name": "garden-web-app-private-rt-eu-west-3a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cea0ad9ddd139be1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:route-table/rtb-08f74e41765236933",
            "id": "rtb-08f74e41765236933",
            "owner_id": "964711978492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ec1a40431726382e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "garden-web-app-private-rt-eu-west-3b"
            },
            "tags_all": {
              "Name": "garden-web-app-private-rt-eu-west-3b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cea0ad9ddd139be1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:route-table/rtb-0b02daefd1ad6899e",
            "id": "rtb-0b02daefd1ad6899e",
            "owner_id": "964711978492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc65d386abca4b3f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "garden-web-app-public-rt"
            },
            "tags_all": {
              "Name": "garden-web-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cea0ad9ddd139be1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1e9d1a7dbd94268",
            "route_table_id": "rtb-04b5f107e4aa798cc",
            "subnet_id": "subnet-0c3b66cf7325d7456"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddde789c2e6225e0",
            "route_table_id": "rtb-08f74e41765236933",
            "subnet_id": "subnet-06fa0300fc630760d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0231e60d06762c295",
            "route_table_id": "rtb-0b02daefd1ad6899e",
            "subnet_id": "subnet-02c49126a7466b425"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0393792a404d85988",
            "route_table_id": "rtb-0b02daefd1ad6899e",
            "subnet_id": "subnet-0be3b65e41a797913"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:subnet/subnet-0c3b66cf7325d7456",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3b66cf7325d7456",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964711978492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "garden-web-app-private-eu-west-3a"
            },
            "tags_all": {
              "Name": "garden-web-app-private-eu-west-3a"
            },
            "vpc_id": "vpc-0cea0ad9ddd139be1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:subnet/subnet-06fa0300fc630760d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fa0300fc630760d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964711978492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "garden-web-app-private-eu-west-3b"
            },
            "tags_all": {
              "Name": "garden-web-app-private-eu-west-3b"
            },
            "vpc_id": "vpc-0cea0ad9ddd139be1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:subnet/subnet-02c49126a7466b425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c49126a7466b425",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "964711978492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "garden-web-app-public-eu-west-3a"
            },
            "tags_all": {
              "Name": "garden-web-app-public-eu-west-3a"
            },
            "vpc_id": "vpc-0cea0ad9ddd139be1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:subnet/subnet-0be3b65e41a797913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be3b65e41a797913",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "964711978492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "garden-web-app-public-eu-west-3b"
            },
            "tags_all": {
              "Name": "garden-web-app-public-eu-west-3b"
            },
            "vpc_id": "vpc-0cea0ad9ddd139be1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:964711978492:vpc/vpc-0cea0ad9ddd139be1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3b3b088c2516a5f",
            "default_route_table_id": "rtb-0871bcd212e244c7e",
            "default_security_group_id": "sg-0b08005813ffe9fa8",
            "dhcp_options_id": "dopt-0789e2dfa1ec7ec33",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cea0ad9ddd139be1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0871bcd212e244c7e",
            "owner_id": "964711978492",
            "tags": {
              "Name": "garden-web-app-vpc"
            },
            "tags_all": {
              "Name": "garden-web-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}